@@ -174,6 +174,10 @@ jobs:
           vscode_arch: loong64
           npm_arch: loong64
           image: vscodium/vscodium-linux-build-agent:trixie-loong64
+        - slug: PPC64
+          vscode_arch: ppc64le
+          npm_arch: ppc64
+          image: vscodium/vscodium-linux-build-agent:focal-ppc64le
     container:
       image: ${{ matrix.image }}
     env:
