@@ -193,7 +193,11 @@ RELEASE_NOTES
 
 <table>
   <tr>
-    <td rowspan="2">Linux</td>
+    <td rowspan="3">Linux</td>
+    <td>.tar.gz</td>
+    <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/VSCodium-linux-ppc64le-RELEASE_VERSION.tar.gz">VSCodium-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
+  </tr>
+  <tr>
     <td>Remote Host</td>
     <td><a href="https://github.com/VSCodium/vscodium/releases/download/RELEASE_VERSION/vscodium-reh-linux-ppc64le-RELEASE_VERSION.tar.gz">vscodium-reh-linux-ppc64le-RELEASE_VERSION.tar.gz</a></td>
   </tr>
